--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "format": "npx prettier . --write",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@p5-wrapper/react": "^4.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -21,6 +23,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "prettier": "3.1.1",
     "vite": "^5.0.0"
   }
 }
