Add djisadklfstra and getEdge function

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@p5-wrapper/react": "^4.3.2",
+    "heapify": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
