--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@p5-wrapper/react": "^4.3.2",
     "heapify": "^0.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "voronoi": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
