--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.5",
     "@p5-wrapper/react": "^4.3.2",
     "heapify": "^0.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tooltip": "^5.25.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
