--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.5",
     "@p5-wrapper/react": "^4.3.2",
+    "@visx/drag": "^3.3.0",
+    "@visx/group": "^3.3.0",
+    "@visx/marker": "^3.5.0",
+    "@visx/shape": "^3.5.0",
+    "@visx/text": "^3.3.0",
     "heapify": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-tooltip": "^5.25.0",
     "voronoi": "^1.0.0"
   },
